initial commit Hugo Rebolledo

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -10,6 +10,7 @@
 
 <meta name="author" content="Hugo Rebolledo" />
 
+<meta name="date" content="2016-02-10" />
 
 <title>Reproducible Research: Peer Assessment 1</title>
 
@@ -63,7 +64,7 @@ img {
 <div id="header">
 <h1 class="title">Reproducible Research: Peer Assessment 1</h1>
 <h4 class="author"><em>Hugo Rebolledo</em></h4>
-<h4 class="date"><em>February 9, 2016</em></h4>
+<h4 class="date"><em>February 10, 2016</em></h4>
 </div>
 
 
